      - Don't choke on empty-for-us index files. Thanks to
        Stefano Zacchiroli <zack@debian.org>.
      - Fixed determining path for storing list file for indexes whose protocol
        doesn't have '//', e.g. 'file'.
        Thanks to Michael Stapelberg <michael@stapelberg.de>.
      - Warn, don't error, when description is not present in Release file.
      - BinaryVersion:
        - [API break] Advanced return value for 'uris' method.
        - 'uris' method: filter duplicates.
    - Config:
      - New configuration option 'cupt::resolver::no-remove'.
      - New configuration option 'cupt::resolver::type'.
      - New configuration option 'cupt::resolver::max-solution-count'.
      - Changed default value for option
        'cupt::downloader::max-simultaneous-downloads' from 3 to 2.
      - Warn, don't error, on setting unknown list option, just like for
        regular options. Thanks to Stefano Zacchiroli <zack@debian.org>.
      - Skip broken parts of config files and warn, don't immediately stop.
      - Added the configuration option 'dpkg::pre-invoke'.
      - Added the configuration option 'dpkg::post-invoke'.
      - Added the configuration options 'rpm::pre-invoke' and 'rpm::post-invoke'.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Fri, 01 May 2009 13:12:00 +0300

cupt (0.1.1.1) experimental; urgency=low

  * debian/control:
    - Put libwww-curl-perl to Build-Depends-Indep so t/file_method.t can load
      it.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Fri, 01 May 2009 01:49:41 +0300

cupt (0.1.1) experimental; urgency=low

  * doc/cupt.1.pod:
    - Added 'Author' section.
  * cupt:
    - Action preview prompt:
      - Generate additional warning when deleting essential packages.
      - Require typing the confirmation phrase for really dangerous actions.
      - Changed 'installed' -> 'INSTALLED' for untrusted packages warning.
    - 'satisfy' subcommand: