@@ -59,6 +59,7 @@ cupt (0.1.2) UNRELEASED; urgency=low
         doesn't have '//', e.g. 'file'.
         Thanks to Michael Stapelberg <michael@stapelberg.de>.
       - Warn, don't error, when description is not present in Release file.
+      - New free subroutine 'get_path_of_debian_changelog'.
       - BinaryVersion:
         - [API break] Advanced return value for 'uris' method.
         - 'uris' method: filter duplicates.
